<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="app_name">TrafficSense Aalto</string>
    <string name="title_activity_main" translatable="false">TrafficSense Aalto</string>
    <string name="title_activity_debugview">Debug</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_about">About TrafficSense</string>
    <string name="title_activity_energy_certificate">Energy Certificate</string>
    <string name="text_close">Close</string>
    <string name="text_continue">Continue</string>
    <string name="trafficsense_web_page">https://aaltotrafficsense.wordpress.com/about/</string>
    <string name="navigation_header_name" translatable="false">TrafficSense Aalto</string>
    <string name="navigation_header_email" translatable="false">trafficsense.aalto@gmail.com</string>
    <string name="email_subject">Sent from client</string>
    <string name="email_startactivity_text">Preparing to send email...</string>
    <string name="navigation_about">About</string>
    <string name="navigation_energy_certificate">Energy Certificate</string>
    <string name="navigation_group2_title">Configuration</string>
    <string name="navigation_login">Google account</string>
    <string name="navigation_broadcast_survey">Latest user survey</string>
    <string name="navigation_broadcast_message">Latest user broadcast</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_startservice">Service start</string>
    <string name="navigation_stopservice">Service stop</string>
    <string name="navigation_debug">Debug</string>
    <string name="navigation_feedback">Send feedback</string>
    <string name="feedback_form_address">https://docs.google.com/forms/d/e/1FAIpQLSeBf3wQFEcmySzjWqYMeVwuA_i8DnnusSMlcthPTbOuxRir7Q/viewform?entry.1453132440&amp;entry.1290358306=client_number&amp;entry.1714883594=client_version&amp;entry.3621406=phone_model</string>
    <string name="navigation_transport">Register transport</string>
    <string name="transport_form_address">https://docs.google.com/forms/d/14qNjB3apfCVq-DeCW4OLOqDeulUyNCA7g7t1v3dBKcQ/viewform?entry.1350607554&amp;entry.1076972644&amp;entry.949631321=client_number</string>
    <string name="navigation_lang_default">Default language</string>
    <string name="navigation_lang_stadi">Stadin slangi</string>
    <string name="lang_select_stadi">Bamlaan stadia.</string>
    <string name="lang_select_default">Switching to default language.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_toolbar_traffic_label">Traffic</string>
    <string name="main_toolbar_path_label">Past routes</string>
    <string name="main_toolbar_dest_label">Destinations</string>
    <string name="service_state_label">Service State:</string>
    <string name="debug_settings_page_title">Settings</string>
    <string name="debug_show_page_title">Dash</string>
    <string name="debug_show_activity_label">Activity:</string>
    <string name="debug_show_activitylist_prefix">Ranking:</string>
    <string name="client_number_label">Client number:</string>
    <string name="debug_show_location_label">Location:</string>
    <string name="debug_show_location_time_label">Latest:</string>
    <string name="debug_show_location_accuracy_label">Accuracy:</string>
    <string name="debug_show_upload_label">Upload:</string>
    <string name="debug_show_upload_queue_length_label">Queue length:</string>
    <string name="debug_show_upload_latest_upload_label">Latest:</string>
    <string name="in_vehicle">Vehicle</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentified: %1$d</string>
    <string name="car">Car</string>
    <string name="bicycle">Bicycle</string>
    <string name="train">Train</string>
    <string name="tram">Tram</string>
    <string name="subway">Subway</string>
    <string name="bus">Bus</string>
    <string name="ferry">Ferry</string>
    <string name="service_state_starting">Starting</string>
    <string name="service_state_running">Running</string>
    <string name="service_state_sleeping">Sleeping</string>
    <string name="service_state_stopping">Stopping</string>
    <string name="service_state_stopped">Stopped</string>
    <string name="service_state_unknown">Unknown</string>
    <string name="interval">Interval:</string>
    <string name="seconds">s.</string>
    <string name="minutes">min.</string>
    <string name="meters">meters</string>
    <string name="points">points</string>
    <string name="str_clientVersionPrefix">Client Version:</string>
    <string name="str_legalNotice">Legal notice:</string>
    <string name="str_contributions">Contributions:</string>
    <string name="str_ok">Ok</string>
    <string name="login_headerText">Sign in with Google Account</string>
    <string name="action_signIn">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Sign out</string>
    <string name="plus_disconnect">Revoke Account access</string>
    <string name="status_text">Status: </string>
    <string name="connection_status_text">Last connection status: </string>
    <string name="status_signing_in">Signing in with Google…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_signed_in">Signed in to Google</string>
    <string name="connection_status_unknown">Unknown</string>
    <string name="connection_status_connected">Connected</string>
    <string name="connection_status_connection_failed">Connection failed</string>
    <string name="status_fetch_auth_tokens">Fetching authentication info</string>
    <string name="status_connecting_to_server">Connecting to server</string>
    <string name="status_authenticated">Authenticated</string>
    <string name="status_authentication_failed">Authentication failed</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="debug_settings_general">General</string>
    <string name="debug_settings_service_running_key" translatable="false">debug_settings_service_running</string>
    <string name="debug_settings_service_running_title">Service running</string>
    <string name="debug_settings_service_running_summary">TrafficSense service on/off.</string>
    <string name="debug_settings_debug_mode_key" translatable="false">debug_settings_debug_mode</string>
    <string name="debug_settings_debug_mode_title">Debug mode</string>
    <string name="debug_settings_debug_mode_summary">Are debug features accessible.</string>
    <string name="debug_settings_ping_threshold_key" translatable="false">settings_ping_limit</string>
    <string name="debug_settings_ping_threshold_title">Ping threshold</string>
    <string name="debug_settings_ping_threshold_summary">Any point queued after threshold exceeded.</string>
    <string-array name="debug_settings_ping_threshold_titles">
        <item>No ping</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
    </string-array>
    <string-array name="debug_settings_ping_threshold_values">
        <item>-1</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>480</item>
    </string-array>
    <string name="debug_settings_location">Location</string>
    <string name="debug_settings_location_interval_key" translatable="false">settings_location_interval</string>
    <string name="debug_settings_location_interval_summary">Location update request interval and max rate.</string>
    <string name="debug_settings_location_accuracy_key" translatable="false">debug_settings_location_accuracy_limit</string>
    <string name="debug_settings_location_accuracy_title">Accuracy limit: </string>
    <string name="debug_settings_location_accuracy_summary">Good fix threshold (queue filter, map circle etc.).</string>
    <string name="debug_settings_activity">Activity</string>
    <string name="debug_settings_activity_interval_key" translatable="false">settings_activity_interval</string>
    <string name="debug_settings_activity_interval_summary">Requested activity recognition report interval.</string>
    <string name="debug_settings_only_good_bypass_key" translatable="false">settings_only_good_bypass</string>
    <string name="debug_settings_only_good_bypass_title">Only good bypass</string>
    <string name="debug_settings_only_good_bypass_summary">Only good activities bypass the queue distance limit criteria (otherwise all).</string>
    <string name="debug_settings_sleep_threshold_key" translatable="false">settings_sleep_threshold</string>
    <string name="debug_settings_sleep_threshold_title">Sleep timeout: </string>
    <string name="debug_settings_sleep_threshold_summary">If activity remains STILL.</string>
    <string name="debug_settings_upload">Upload</string>
    <string name="debug_settings_upload_enabled_key" translatable="false">settings_upload_enabled</string>
    <string name="debug_settings_upload_enabled_title">Upload enabled</string>
    <string name="debug_settings_upload_enabled_summary">Passing threshold sends points.</string>
    <string name="debug_settings_upload_threshold_key" translatable="false">settings_upload_threshold</string>
    <string name="debug_settings_upload_threshold_title">Queue threshold: </string>
    <string name="debug_settings_upload_threshold_summary">Limit for trying to upload.</string>
    <string name="upload_threshold_change">Change applied after next upload.</string>
    <string name="debug_settings_restore">Reset</string>
    <string name="debug_settings_restore_defaults_key" translatable="false">debug_settings_restore_defaults</string>
    <string name="debug_settings_restore_defaults_title">Restore defaults</string>
    <string name="debug_settings_restore_defaults_summary">Restore these settings to default values.</string>
    <string name="settings_locale_stadi_key" translatable="false">settings_locale_stadi</string>
    <string name="settings_last_version_key" translatable="false">settings_last_version</string>
    <string name="settings_eula_shown_key" translatable="false">settings_eula_shown</string>
    <string name="upload_state_switchedoff">Switched off</string>
    <string name="upload_state_signedout">Signed out</string>
    <string name="upload_state_noclientnumber">No client number obtained</string>
    <string name="upload_state_ready">Ready</string>
    <string name="upload_state_inprogress">In progress</string>
    <string name="upload_state_failed">Failed</string>
    <string name="upload_state_disabled">Disabled</string>
    <string name="upload_state_unknown">Unknown state</string>
    <string name="location_state_off">Off</string>
    <string name="location_state_nopower">No power</string>
    <string name="location_state_high">High accuracy</string>
    <string name="not_available">Not available</string>
    <string name="sleeping">Sleeping</string>
    <string name="location_permission_persistently_refused">TrafficSense is based on location information. The background service will close now.</string>
    <string name="location_permission_refused">TrafficSense does not work meaningfully without location permissions.</string>
    <string name="no_location_permission">No location permission.</string>
    <string name="upload_button">Upload</string>
</resources>