<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/navigation_about"/>
        <item
            android:id="@+id/nav_energy"
            android:icon="@drawable/md_activity_bicycle_24dp1"
            android:title="@string/navigation_energy_certificate"/>
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/md_activity_bus_24dp"
            android:title="@string/navigation_transport"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_message_24dp"
            android:title="@string/navigation_feedback"/>

    <item android:title="@string/navigation_group2_title">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_google_24dp"
                android:title="@string/navigation_login"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/navigation_settings"
                android:visible="false"/>
            <item
                android:id="@+id/nav_startup"
                android:icon="@drawable/ic_cloud_queue_24dp"
                android:title="@string/navigation_startservice"
                android:visible="false"/>
            <item
                android:id="@+id/nav_shutdown"
                android:icon="@drawable/ic_cloud_off_24dp"
                android:title="@string/navigation_shutdown"/>
            <item
                android:id="@+id/nav_debug"
                android:icon="@drawable/ic_bug_report_24dp"
                android:title="@string/navigation_debug"
                android:visible="false"/>
        </menu>
    </item>

</menu>
