<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/side_nav_bar"
              android:gravity="top"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/main_drawer_icon"
        android:adjustViewBounds="true"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:paddingTop="34dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openTrafficSenseWeb"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_trafficsense_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:clickable="true"
        android:focusable="true"
        android:onClick="sendEmail"
        android:text="@string/navigation_header_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/main_drawer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="sendEmail"
        android:text="@string/navigation_header_email"/>
</LinearLayout>
