<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="fi.aalto.trafficsense.trafficsense.ui.DebugShowFragment">

    <!-- Service State -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@drawable/border">

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
            <TableRow android:id="@+id/debug_show_service_header_row"
                      android:background="@color/colorStill">
                <TextView android:id="@+id/debug_show_service_label"
                          android:textColor="@color/grayText"
                          android:layout_weight="1"
                          style="@android:style/TextAppearance.Large"
                          android:text="@string/service_state_label" />
                <TextView android:id="@+id/debug_show_service_state"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          style="@android:style/TextAppearance.Large"
                          android:textColor="@color/grayText"
                          android:text="@string/service_state_unknown"
                          android:layout_weight="2"
                          android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView style="@android:style/TextAppearance.Medium"
                          android:layout_weight="1"
                          android:text="@string/debug_show_client_number_label"
                          android:textColor="@color/black" />
                <TextView android:id="@+id/debug_show_client_number"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/black"
                          android:layout_weight="2"
                          android:gravity="end"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>


    <!-- Recognized Activity -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@drawable/border">

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
            <TableRow android:id="@+id/debug_show_activity_header_row"
                      android:background="@color/colorStill">
                <TextView android:id="@+id/debug_show_activity_label"
                          android:textColor="@color/grayText"
                          android:layout_weight="1"
                          style="@android:style/TextAppearance.Large"
                          android:text="@string/debug_show_activity_label" />
                <TextView android:id="@+id/debug_show_activity_top"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          style="@android:style/TextAppearance.Large"
                          android:textColor="@color/grayText"
                          android:layout_weight="2"
                          android:gravity="end"/>

            </TableRow>
            <TableRow>
                <TextView android:id="@+id/debug_show_activity_list_label"
                          style="@android:style/TextAppearance.Medium"
                          android:layout_weight="1"
                          android:text="@string/debug_show_activitylist_prefix"
                          android:textColor="@color/black" />
                <TextView android:id="@+id/debug_show_activities"
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:textColor="@color/black"
                          android:layout_weight="2"
                          android:gravity="end"
                    />
                </TableRow>
            <TableRow>
                <TextView android:id="@+id/debug_show_activity_time"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/black"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@drawable/border">


        <TableLayout android:id="@+id/debug_show_TableData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
            <TableRow android:id="@+id/debug_show_location_header_row"
                      android:background="@color/colorStill">
                <TextView android:id="@+id/debug_show_location_label"
                          android:textColor="@color/grayText"
                          android:layout_weight="1"
                          style="@android:style/TextAppearance.Large"
                          android:text="@string/debug_show_location_label" />
                <TextView android:id="@+id/debug_show_location_provider"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          style="@android:style/TextAppearance.Large"
                          android:textColor="@color/grayText"
                          android:layout_weight="2"
                          android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView android:id="@+id/debug_show_location_accuracy_label"
                style="@android:style/TextAppearance.Medium"
                          android:layout_weight="1"
                          android:text="@string/debug_show_location_accuracy_label"
                          android:textColor="@color/black" />
                <TextView android:id="@+id/debug_show_location_accuracy"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/black"
                          android:layout_weight="2"
                          android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView android:id="@+id/debug_show_location_time"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/black"/>
            </TableRow>

        </TableLayout>
    </RelativeLayout>

    <!-- Upload -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:background="@drawable/border">

        <TableLayout android:id="@+id/debug_show_upload"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">

            <TableRow android:id="@+id/debug_show_upload_header_row"
                      android:background="@color/colorStill">
                <TextView android:id="@+id/debug_show_upload_label"
                          android:textColor="@color/grayText"
                          android:layout_weight="1"
                          style="@android:style/TextAppearance.Large"
                          android:text="@string/debug_show_upload_label" />
                <TextView android:id="@+id/debug_show_upload_state"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          style="@android:style/TextAppearance.Large"
                          android:textColor="@color/grayText"
                          android:layout_weight="2"
                          android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView style="@android:style/TextAppearance.Medium"
                          android:layout_weight="1"
                          android:text="@string/debug_show_upload_queue_length_label"
                          android:textColor="@color/black"
                          android:id="@+id/debug_show_queue_length_label"/>
                <TextView
                    android:id="@+id/debug_show_queue_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_weight="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow>
                <TextView style="@android:style/TextAppearance.Medium"
                          android:layout_weight="1"
                          android:text="@string/debug_show_upload_latest_upload_label"
                          android:textColor="@color/black"
                          android:id="@+id/debug_show_latest_upload_label"/>
                <TextView
                    android:id="@+id/debug_show_latest_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:layout_weight="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:gravity="end">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/upload_button"
                    android:textAllCaps="false"
                    android:id="@+id/debug_show_upload_button"
                    android:onClick="uploadButton"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>
            </TableRow>
        </TableLayout>

    </RelativeLayout>

</LinearLayout>